--- a/index.html
+++ b/index.html
@@ -691,6 +691,19 @@
                                                     : "bg-gradient-to-r from-pink-50 to-purple-50 border-2 border-pink-200 hover:from-pink-100 hover:to-purple-100 shadow-md hover:shadow-lg"
                                             } ${draggedItem?.id === task.id ? "opacity-50" : ""}`
                                         },
+                                            // Tag indicators at edges when active
+                                            task.project && !task.completed && h('div', {
+                                                className: "absolute -top-2 -left-2 bg-gradient-to-r from-indigo-400 to-violet-400 text-white text-xs px-2 py-1 rounded-full shadow-lg flex items-center gap-1"
+                                            }, h('span', null, "🐌"), h('span', { className: "font-medium" }, "PROJECT")),
+
+                                            task.urgent && !task.completed && h('div', {
+                                                className: "absolute -top-2 -right-2 bg-gradient-to-r from-pink-400 to-red-400 text-white text-xs px-2 py-1 rounded-full shadow-lg flex items-center gap-1"
+                                            }, h('span', null, "⭐"), h('span', { className: "font-medium" }, "PRIORITY")),
+
+                                            task.easy && !task.completed && h('div', {
+                                                className: "absolute -bottom-2 -left-2 bg-gradient-to-r from-blue-400 to-cyan-400 text-white text-xs px-2 py-1 rounded-full shadow-lg flex items-center gap-1"
+                                            }, h('span', null, "🪽"), h('span', { className: "font-medium" }, "QUICK")),
+
                                             // Tag toggle buttons at top (always visible for incomplete tasks)
                                             !task.completed && h('div', { className: "mb-2 flex justify-center gap-2" },
                                                 h('button', {
